[SETTING] 자바 21 사용 설정
* [SETTING] README.md 작성

* [SETTING] Intellij 설정